Phasing out GeographicCoordinateException