@@ -37,10 +37,10 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.Map;
 
-import org.loverde.geographiccoordinate.exception.GeographicCoordinateException;
 import org.loverde.geographiccoordinate.internal.EnumHelper;
 
 import static java.math.BigDecimal.ZERO;
+import static org.loverde.geographiccoordinate.internal.Objects.failIf;
 
 
 /**
@@ -153,9 +153,7 @@ public enum CompassDirection8 implements CompassDirection {
         final CompassDirection8[] values;
         CompassDirection8 dir;
 
-        if (bearing.compareTo(ZERO) < 0 || bearing.compareTo(BD360) > 0) {
-            throw new GeographicCoordinateException(String.format("Bearing %s is not in range [0, 360]", bearing.toPlainString()));
-        }
+        failIf(bearing.compareTo(ZERO) < 0 || bearing.compareTo(BD360) > 0, () -> "Bearing %s is not in range [0, 360]".formatted(bearing.toPlainString()));
 
         values = values();
         newBearing = (bearing.compareTo(BD360) == 0 ? ZERO : bearing).setScale(2, RoundingMode.HALF_UP);
